<resources>

    <string name="add">+</string>
    <string name="album_description">Name</string>
    <string name="app_name">Coffee Ordering App</string>
    <string name="check_box_2">Chocolate ($1)</string>
    <string name="email">Email</string>
    <string name="notify_me">Whipped Cream ($1)</string>
    <string name="order">Order</string>
    <string name="phone_number">Phone Number</string>
    <string name="price">Price</string>
    <string name="price_Summary">Price Summary</string>
    <string name="priceValue">$0</string>
    <string name="quantity">Quantity</string>
    <string name="sms">SMS</string>
    <string name="sub">-</string>
    <string name="toppings">Toppings</string>
</resources>
